--- a/main.html
+++ b/main.html
@@ -3,85 +3,224 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DPS Bokaro Portal</title>
+<title>WhitePEAK Portal</title>
 <style>
+/* Reset */
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
-body{background: linear-gradient(135deg,#0f0f0f,#1c1c1c); color:white; min-height:100vh; display:flex; flex-direction:column; transition:0.5s;}
-header{display:flex; justify-content:space-between; align-items:center; padding:15px 25px; background:rgba(0,0,0,0.9); position:sticky; top:0; z-index:1000; box-shadow:0 2px 10px rgba(255,255,255,0.1);}
-header img{height:45px; width:auto; border-radius:10px;}
-header .center-text{flex-grow:1;text-align:center;}
+body{background:linear-gradient(135deg,#0f0f0f,#1c1c1c);color:white;min-height:100vh;display:flex;flex-direction:column;transition:background 0.5s,color 0.5s;}
+header{display:flex;justify-content:space-between;align-items:center;padding:15px 25px;background:rgba(0,0,0,0.9);box-shadow:0 2px 10px rgba(255,255,255,0.1);position:sticky;top:0;z-index:1000;}
+header img{height:45px;width:auto;border-radius:10px;}
+header .center-text{text-align:center;flex-grow:1;}
 header h1{font-size:18px;font-weight:600;color:#f5f5f5;margin-bottom:5px;}
 header p{font-size:12px;color:#bbb;font-style:italic;}
-header .right{font-size:14px;color:#ccc; position:relative;}
-#usernameDisplay{color:#4ea3ff;font-weight:bold;}
-
-/* Toggle */
-.toggle-container{display:flex; align-items:center; gap:6px;}
+.toggle-container{display:flex;align-items:center;gap:10px;}
 .toggle-container label{font-size:13px;color:#ccc;}
-.toggle{width:40px;height:20px;background:#444;border-radius:20px;position:relative;cursor:pointer; transition:0.3s;}
-.toggle::before{content:"";position:absolute;top:2px;left:2px;width:16px;height:16px;background:white;border-radius:50%;transition:0.3s;}
+.toggle{width:40px;height:20px;background:#444;border-radius:20px;position:relative;cursor:pointer;transition:background 0.3s;}
+.toggle::before{content:"";position:absolute;top:2px;left:2px;width:16px;height:16px;background:white;border-radius:50%;transition:transform 0.3s;}
 .toggle.active{background:#4ea3ff;}
 .toggle.active::before{transform:translateX(20px);}
+#loggedInUser{font-size:14px;color:#ccc;font-style:italic;}
+.signout-btn{background:#e53935;color:white;padding:6px 10px;border:none;border-radius:8px;cursor:pointer;font-weight:bold;transition:0.3s;}
+.signout-btn:hover{background:#c62828;}
+main{flex-grow:1;width:100%;padding:20px;display:flex;flex-direction:column;align-items:center;position:relative;}
 
-/* Layout */
-main{flex-grow:1; padding:40px 20px; text-align:center;}
-main h2{font-size:28px;margin-bottom:10px;}
-main p{font-size:16px;color:#aaa; max-width:600px;margin:0 auto;}
+/* Welcome Animation */
+.welcome-container{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);text-align:center;z-index:500;}
+.welcome-text{font-size:36px;font-weight:bold;color:#ffffff;text-align:center;animation:welcomeMove 3s forwards;}
+@keyframes welcomeMove{
+  0%{opacity:0;transform:translate(-50%,-50%) scale(1);}
+  20%{opacity:1;transform:translate(-50%,-50%) scale(1);}
+  100%{opacity:0;transform:translate(-50%,-150%) scale(0.9);}
+}
 
-footer{background:rgba(0,0,0,0.9); color:#bbb; text-align:center; padding:15px; font-size:14px; border-top:1px solid rgba(255,255,255,0.1);}
-footer a{color:#4ea3ff;text-decoration:none;}
-footer a:hover{text-decoration:underline;}
+/* Sections */
+.content-sections{display:flex;flex-direction:column;align-items:center;margin-top:60px;opacity:0;transition:opacity 1s ease;width:100%;max-width:1000px;}
+.section{width:90%;margin:30px 0;padding:20px;border-radius:15px;border:1px solid rgba(255,255,255,0.2);transition:all 0.5s;}
+.section h2{font-size:24px;margin-bottom:20px;}
+.section .pdf-space{min-height:120px;border:1px dashed rgba(255,255,255,0.2);border-radius:10px;display:flex;justify-content:center;align-items:center;color:#888;}
+.section:hover{border-color:#4ea3ff;background:rgba(78,163,255,0.1);}
 
+/* Events Section */
+.events-section{width:90%;background:rgba(78,163,255,0.1);border:2px solid #4ea3ff;border-radius:20px;padding:40px;text-align:center;color:#ccc;font-size:20px;margin:50px 0;opacity:0;transform:translateY(50px);transition:all 1s ease;}
+
+/* Community Chat */
+.chat-section{width:90%;max-width:1000px;border:2px solid #4ea3ff;border-radius:15px;background:rgba(0,0,0,0.8);padding:20px;margin-bottom:50px;color:#fff;}
+.chat-section h2{margin-bottom:10px;}
+.chat-messages{max-height:300px;overflow-y:auto;border:1px solid rgba(255,255,255,0.2);border-radius:10px;padding:10px;margin-bottom:10px;background:rgba(0,0,0,0.6);display:flex;flex-direction:column;}
+.chat-message{margin-bottom:8px;word-wrap: break-word;}
+.chat-message span.username{font-weight:bold;margin-right:5px;}
+.chat-message.shreyam span.username,
+.chat-message.saksham span.username{
+  color:#ffd700;text-shadow:0 0 5px #ffd700;
+}
+.chat-message.shreyam span.username::after,
+.chat-message.saksham span.username::after{content:" (DEV)";font-weight:bold;color:#ffea00;}
+
+/* Chat Input */
+.chat-input-container{display:flex;gap:10px;}
+.chat-input-container input{flex:1;padding:8px;border-radius:8px;border:none;outline:none;}
+.chat-input-container button{padding:8px 15px;border:none;border-radius:8px;background:#4ea3ff;color:white;cursor:pointer;font-weight:bold;}
+.chat-input-container button:hover{background:#357ab7;}
+
+/* Light Mode */
 .light-mode{background:#f5f5f5;color:#222;}
 .light-mode header{background:#e0e0e0;color:#222;}
 .light-mode header h1, .light-mode header p{color:#222;}
-.light-mode footer{background:#e0e0e0;color:#222;}
+.light-mode .section{border-color:rgba(0,0,0,0.2);background:rgba(0,0,0,0.05);color:#222;}
+.light-mode .section:hover{background:rgba(78,163,255,0.2);color:#222;border-color:#4ea3ff;}
+.light-mode .events-section{color:#222;border-color:#4ea3ff;background:rgba(78,163,255,0.05);}
+.light-mode .events-section:hover{background:rgba(78,163,255,0.2);color:#222;}
+.light-mode .chat-section{background:rgba(255,255,255,0.9);color:#222;}
+.light-mode .chat-messages{background:rgba(255,255,255,0.7);color:#222;}
+.light-mode .chat-input-container button{background:#4ea3ff;color:#fff;}
 
-@media(max-width:768px){
-  main{padding:20px;}
-}
+@media(max-width:800px){.section,.chat-section{width:95%;}}
+footer{background:rgba(0,0,0,0.9);color:#bbb;text-align:center;padding:15px;font-size:14px;border-top:1px solid rgba(255,255,255,0.1);}
+footer a{color:#4ea3ff;text-decoration:none;}
+footer a:hover{text-decoration:underline;}
 </style>
 </head>
 <body>
 
+<!-- HEADER -->
 <header>
-  <img src="C:/Users/TQG/Downloads/LOGO.jpg.png" alt="WhitePEAK Logo">
-  <div class="center-text">
-    <h1>For DPS Bokaro Class 7/C Students Only</h1>
-    <p>"Nothing you need to remember"</p>
-    <div id="userHeader" style="margin-top:5px; font-size:14px; color:#ccc;">Logged in as: <span id="usernameDisplay"></span></div>
-  </div>
-  <div class="toggle-container">
-    <label>Light</label>
-    <div class="toggle" id="themeToggle"></div>
-  </div>
+<img src="LOGO.jpg.png" alt="WhitePEAK Logo">
+<div class="center-text">
+<h1>WhitePEAK Portal</h1>
+<p>NOTHING YOU NEED TO REMEMBER</p>
+</div>
+<div class="toggle-container">
+<label id="toggleLabel">Light</label>
+<div class="toggle" id="themeToggle"></div>
+<span id="loggedInUser">Logged in as: </span>
+<button class="signout-btn" onclick="signOut()">Sign Out</button>
+</div>
 </header>
 
-<main>
-  <h2>Welcome to DPS Bokaro Class 7/C Portal</h2>
-  <p>This website is designed exclusively for Class 7/C students of DPS Bokaro. Here you’ll find school updates, assignments, and notices. Stay tuned for daily updates and announcements.</p>
+<!-- Welcome Animation -->
+<div class="welcome-container">
+<div class="welcome-text">Welcome to WhitePEAK Portal</div>
+</div>
+
+<!-- MAIN CONTENT -->
+<main class="content-sections" id="contentSections">
+  <div class="section">
+    <h2>Class Work</h2>
+    <div class="pdf-space">Space for PDFs/Resources</div>
+  </div>
+  <div class="section">
+    <h2>Home Work</h2>
+    <div class="pdf-space">Space for PDFs/Resources</div>
+  </div>
+  <div class="section">
+    <h2>Assignments</h2>
+    <div class="pdf-space">Space for PDFs/Resources</div>
+  </div>
+
+  <div class="events-section" id="eventsSection">
+    <h2>Events</h2>
+    <p>Oops, nothing to see here right now</p>
+  </div>
+
+  <!-- Community Chat Section -->
+  <div class="chat-section">
+    <h2>Community Chat</h2>
+    <div class="chat-messages" id="chatMessages"></div>
+    <div class="chat-input-container">
+      <input type="text" id="chatInput" placeholder="Type a message...">
+      <button onclick="sendMessage()">Send</button>
+    </div>
+  </div>
 </main>
 
+<!-- FOOTER -->
 <footer>
-  <p>© 2025 WhitePEAK Productions — All Rights Reserved.</p>
-  <p>Founder & Developer: <strong>Shreyam Sharma & Saksham Kumar</strong></p>
-  <p>For any problem, contact us at <a href="mailto:whitepeakproductions9811@gmail.com">whitepeakproductions9811@gmail.com</a></p>
+<p>© 2025 WhitePEAK Productions — All Rights Reserved.</p>
+<p>Founder & Developer: <strong>Shreyam Sharma & Saksham Kumar</strong></p>
+<p>For any problem, contact us at 
+<a href="mailto:whitepeakproductions9811@gmail.com">
+whitepeakproductions9811@gmail.com
+</a>
+</p>
 </footer>
 
+<!-- Scripts -->
 <script>
-// Dark/Light toggle with label change
 const toggle = document.getElementById('themeToggle');
-const label = document.querySelector('.toggle-container label');
-toggle.addEventListener('click', () => {
+const toggleLabel = document.getElementById('toggleLabel');
+const loggedInUserSpan = document.getElementById('loggedInUser');
+const chatMessages = document.getElementById('chatMessages');
+const chatInput = document.getElementById('chatInput');
+
+// Logged in user
+const savedName = localStorage.getItem('savedName');
+loggedInUserSpan.textContent = savedName ? "Logged in as: " + savedName : "Logged in as: Guest";
+
+// Toggle switch
+toggle.addEventListener('click', ()=>{
   document.body.classList.toggle('light-mode');
   toggle.classList.toggle('active');
-  label.textContent = document.body.classList.contains('light-mode') ? 'Dark' : 'Light';
+  toggleLabel.textContent = toggle.classList.contains('active') ? 'Dark' : 'Light';
 });
 
-// Logged-in username
-const username = localStorage.getItem('savedName') || "Guest";
-document.getElementById('usernameDisplay').innerText = username;
+// Sign Out
+function signOut(){
+  localStorage.removeItem('savedName');
+  localStorage.removeItem('savedGender');
+  window.location.href = "index.html"; // <-- insert your transfer location
+}
+
+// Animate sections after welcome text
+window.addEventListener('load', ()=>{
+  setTimeout(()=>{
+    const contentSections = document.getElementById('contentSections');
+    contentSections.style.opacity = 1;
+
+    const events = document.getElementById('eventsSection');
+    events.style.opacity = 1;
+    events.style.transform = "translateY(0)";
+  },3000); // wait for welcome animation
+});
+
+// Chat functionality
+let messages = [];
+
+// Load chat from localStorage if exists
+if(localStorage.getItem('communityChat')){
+  messages = JSON.parse(localStorage.getItem('communityChat'));
+  renderMessages();
+}
+
+function sendMessage(){
+  const msgText = chatInput.value.trim();
+  if(msgText === "") return;
+  const username = savedName || "Guest";
+  const timestamp = new Date().getTime();
+  const msgObj = {username,msgText,timestamp};
+  messages.push(msgObj);
+  localStorage.setItem('communityChat', JSON.stringify(messages));
+  renderMessages();
+  chatInput.value = "";
+}
+
+function renderMessages(){
+  chatMessages.innerHTML = "";
+  const now = new Date().getTime();
+  // Remove messages older than 24h
+  messages = messages.filter(m => now - m.timestamp < 24*60*60*1000);
+  localStorage.setItem('communityChat', JSON.stringify(messages));
+  messages.forEach(msg=>{
+    const div = document.createElement('div');
+    div.classList.add('chat-message');
+    if(msg.username.toLowerCase() === "shreyam") div.classList.add('shreyam');
+    if(msg.username.toLowerCase() === "saksham") div.classList.add('saksham');
+    div.innerHTML = `<span class="username">${msg.username}:</span> ${msg.msgText}`;
+    chatMessages.appendChild(div);
+  });
+  chatMessages.scrollTop = chatMessages.scrollHeight;
+}
 </script>
 
 </body>
 </html>
+
