--- a/main.html
+++ b/main.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WhitePEAK Portal</title>
   <style>
     * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Poppins", sans-serif;
+      margin: 0; padding: 0; box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
     }
 
     body {
@@ -18,96 +16,60 @@
       min-height: 100vh;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
       transition: background 0.5s, color 0.5s;
     }
 
     header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      display: flex; justify-content: space-between; align-items: center;
       padding: 15px 25px;
       background: rgba(0, 0, 0, 0.9);
-      box-shadow: 0 2px 10px rgba(255, 255, 255, 0.1);
-      position: sticky;
-      top: 0;
-      z-index: 1000;
+      box-shadow: 0 2px 10px rgba(255,255,255,0.1);
+      position: sticky; top: 0; z-index: 1000;
     }
 
     header img {
-      height: 45px;
-      border-radius: 10px;
+      height: 45px; border-radius: 10px;
     }
 
-    .center-text {
-      text-align: center;
-      flex-grow: 1;
+    header .center-text {
+      text-align: center; flex-grow: 1;
     }
 
-    .center-text h1 {
-      font-size: 18px;
-      font-weight: 600;
-      color: #f5f5f5;
-      margin-bottom: 5px;
+    header h1 {
+      font-size: 18px; font-weight: 600;
     }
 
-    .center-text p {
-      font-size: 12px;
-      color: #bbb;
-      font-style: italic;
+    header p {
+      font-size: 12px; color: #bbb; font-style: italic;
     }
 
     .toggle-container {
-      display: flex;
-      align-items: center;
-      gap: 6px;
+      position: absolute; top: 18px; right: 100px;
+      display: flex; align-items: center; gap: 6px;
     }
 
     .toggle {
-      width: 40px;
-      height: 20px;
-      background: #444;
-      border-radius: 20px;
-      position: relative;
-      cursor: pointer;
-      transition: background 0.3s;
+      width: 40px; height: 20px; background: #444; border-radius: 20px;
+      position: relative; cursor: pointer; transition: background 0.3s;
     }
 
     .toggle::before {
-      content: "";
-      position: absolute;
-      top: 2px;
-      left: 2px;
-      width: 16px;
-      height: 16px;
-      background: white;
-      border-radius: 50%;
+      content: ""; position: absolute; top: 2px; left: 2px;
+      width: 16px; height: 16px; background: white; border-radius: 50%;
       transition: transform 0.3s;
     }
 
-    .toggle.active {
-      background: #4ea3ff;
-    }
-
-    .toggle.active::before {
-      transform: translateX(20px);
-    }
+    .toggle.active { background: #4ea3ff; }
+    .toggle.active::before { transform: translateX(20px); }
 
     .signout-btn {
-      background: #ff4e4e;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      padding: 5px 12px;
-      cursor: pointer;
-      font-size: 14px;
-      margin-left: 10px;
-      transition: background 0.3s;
+      position: absolute; top: 15px; right: 25px;
+      background: #ff4d4d; border: none; color: white;
+      padding: 6px 10px; border-radius: 6px;
+      cursor: pointer; font-size: 13px;
     }
 
-    .signout-btn:hover {
-      background: #ff6b6b;
-    }
+    .signout-btn:hover { background: #ff1a1a; }
 
     main {
       flex-grow: 1;
@@ -118,248 +80,252 @@
       padding: 40px 20px;
     }
 
-    .welcome-text {
+    .welcome {
       font-size: 26px;
-      font-weight: bold;
-      animation: fadeMoveUp 3s ease-in-out forwards;
-    }
-
-    @keyframes fadeMoveUp {
-      0% { opacity: 0; transform: translateY(20px); }
-      50% { opacity: 1; transform: translateY(0); }
-      100% { opacity: 0; transform: translateY(-60px); }
-    }
-
-    .sections {
+      font-weight: 600;
+      margin-bottom: 40px;
       opacity: 0;
-      transform: translateY(50px);
-      animation: showSections 3s ease-in-out 3s forwards;
-      display: flex;
-      flex-direction: column;
-      gap: 30px;
-      width: 100%;
-      max-width: 800px;
+      animation: fadeInUp 2s forwards;
     }
 
-    @keyframes showSections {
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(40px); }
       to { opacity: 1; transform: translateY(0); }
     }
 
-    section {
-      background: rgba(255, 255, 255, 0.05);
-      padding: 20px;
-      border-radius: 15px;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
-    }
-
-    section h2 {
-      font-size: 20px;
-      margin-bottom: 10px;
-      font-weight: 600;
-    }
-
-    #community-chat {
-      margin-bottom: 50px;
-    }
-
-    #chat-messages {
-      max-height: 250px;
-      overflow-y: auto;
-      padding: 10px;
-      background: rgba(255, 255, 255, 0.05);
-      border-radius: 10px;
-      text-align: left;
-    }
-
-    .chat-message {
-      margin-bottom: 6px;
-    }
-
-    .chat-message strong {
-      color: #4ea3ff;
-    }
-
-    .chat-message.dev strong {
-      color: #ffd700;
-    }
-
-    #chat-form {
-      margin-top: 10px;
+    .sections {
       display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 40px;
+    }
+
+    .section {
+      width: 250px; height: 120px;
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255,255,255,0.1);
+      border-radius: 12px;
+      display: flex; align-items: center; justify-content: center;
+      font-size: 20px; font-weight: 600;
+      transition: all 0.3s;
+      user-select: none;
+      touch-action: manipulation;
+    }
+
+    .section:hover, .section:active {
+      transform: scale(1.05);
+      background: rgba(255,255,255,0.15);
+      box-shadow: 0 0 15px rgba(255,255,255,0.2);
+    }
+
+    .events {
+      margin-top: 30px;
+      padding: 20px;
+      background: rgba(255,255,255,0.05);
+      border-radius: 15px;
+      width: 80%;
+      max-width: 800px;
+      border: 1px solid rgba(255,255,255,0.1);
+    }
+
+    .events h3 {
+      margin-bottom: 10px;
+      font-size: 22px;
+    }
+
+    .chat-box {
+      margin-top: 40px;
+      width: 80%;
+      max-width: 800px;
+      background: rgba(255,255,255,0.05);
+      border-radius: 15px;
+      padding: 20px;
+      border: 1px solid rgba(255,255,255,0.1);
+      display: flex;
+      flex-direction: column;
+      max-height: 350px;
+    }
+
+    .messages {
+      flex-grow: 1;
+      overflow-y: auto;
+      margin-bottom: 15px;
+      display: flex;
+      flex-direction: column;
       gap: 10px;
     }
 
-    #chat-input {
+    .message {
+      padding: 8px 10px;
+      border-radius: 8px;
+      background: rgba(255,255,255,0.08);
+      text-align: left;
+      word-wrap: break-word;
+    }
+
+    .dev {
+      background: rgba(78,163,255,0.3);
+      border-left: 4px solid #4ea3ff;
+      font-weight: 600;
+    }
+
+    .chat-input {
+      display: flex; gap: 10px;
+    }
+
+    .chat-input input {
       flex-grow: 1;
       padding: 8px;
-      border-radius: 8px;
+      border-radius: 6px;
       border: none;
       outline: none;
     }
 
-    #chat-form button {
+    .chat-input button {
       padding: 8px 15px;
       border: none;
       background: #4ea3ff;
       color: white;
-      border-radius: 8px;
+      border-radius: 6px;
       cursor: pointer;
     }
 
+    .chat-input button:hover { background: #1f8bff; }
+
     footer {
-      background: rgba(0, 0, 0, 0.9);
+      background: rgba(0,0,0,0.9);
       color: #bbb;
       text-align: center;
       padding: 15px;
       font-size: 14px;
-      border-top: 1px solid rgba(255, 255, 255, 0.1);
+      border-top: 1px solid rgba(255,255,255,0.1);
     }
 
-    .light-mode {
-      background: #f5f5f5;
+    .light-mode { background: #f5f5f5; color: #222; }
+    .light-mode header { background: #e0e0e0; color: #222; }
+    .light-mode footer { background: #e0e0e0; color: #222; }
+    .light-mode .section, .light-mode .events, .light-mode .chat-box {
+      background: rgba(0,0,0,0.05);
       color: #222;
     }
-
-    .light-mode header {
-      background: #e0e0e0;
-    }
-
-    .light-mode section {
-      background: #fff;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .light-mode #chat-messages {
-      background: #eee;
-    }
-
-    .light-mode footer {
-      background: #e0e0e0;
-      color: #222;
-    }
-
   </style>
 </head>
 <body>
+
   <header>
-    <img src="LOGO.jpg.png" alt="WhitePEAK Logo" />
+    <img src="LOGO.jpg.png" alt="WhitePEAK Logo">
     <div class="center-text">
       <h1>NOTHING YOU NEED TO REMEMBER</h1>
-      <p>Logged in as <strong id="username-display"></strong></p>
+      <p id="userDisplay">Logged in as: ...</p>
     </div>
+
     <div class="toggle-container">
       <div class="toggle" id="themeToggle"></div>
-      <button class="signout-btn" onclick="signOut()">Sign Out</button>
     </div>
+
+    <button class="signout-btn" onclick="signOut()">Sign Out</button>
   </header>
 
   <main>
-    <div class="welcome-text" id="welcome-text">Welcome to WhitePEAK Portal</div>
+    <div class="welcome">Welcome to WhitePEAK Portal</div>
 
     <div class="sections">
-      <section>
-        <h2>Class Work</h2>
-        <p>Upload or view classwork files here.</p>
-      </section>
-      <section>
-        <h2>Home Work</h2>
-        <p>Upload or view homework assignments here.</p>
-      </section>
-      <section>
-        <h2>Assignments</h2>
-        <p>Upload or view assignment materials here.</p>
-      </section>
-      <section>
-        <h2>Events</h2>
-        <p>Oops, nothing to see here right now.</p>
-      </section>
+      <div class="section">Class Work</div>
+      <div class="section">Home Work</div>
+      <div class="section">Assignments</div>
+    </div>
 
-      <section id="community-chat">
-        <h2>Community Chat</h2>
-        <div id="chat-messages"></div>
-        <form id="chat-form">
-          <input id="chat-input" type="text" placeholder="Type a message..." />
-          <button type="submit">Send</button>
-        </form>
-      </section>
+    <div class="events">
+      <h3>Events</h3>
+      <p>Oops, nothing to see here right now.</p>
+    </div>
+
+    <div class="chat-box">
+      <h3>Community Chat</h3>
+      <div class="messages" id="messages"></div>
+      <div class="chat-input">
+        <input type="text" id="messageInput" placeholder="Type your message...">
+        <button onclick="sendMessage()">Send</button>
+      </div>
     </div>
   </main>
 
   <footer>
     <p>© 2025 WhitePEAK Productions — All Rights Reserved.</p>
     <p>Founder & Developer: <strong>Shreyam Sharma & Saksham Kumar</strong></p>
+    <p>Contact: <a href="mailto:whitepeakproductions9811@gmail.com">whitepeakproductions9811@gmail.com</a></p>
   </footer>
 
-  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-  <script>
-    // Replace with your own Supabase project credentials
-    const SUPABASE_URL = "https://gqchuococleviialhzor.supabase.co";
-    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImdxY2h1b2NvY2xldmlpYWxoem9yIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NDc5MDgsImV4cCI6MjA3ODUyMzkwOH0.5gNWgtXyb4w4B8pyIfpGX71Tb3GLujyf4eN5f8O0PXY";
+  <script type="module">
+    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
-    const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
-    const chatContainer = document.getElementById("chat-messages");
-    const chatForm = document.getElementById("chat-form");
-    const chatInput = document.getElementById("chat-input");
-    const username = localStorage.getItem("username") || "Anonymous";
-    document.getElementById("username-display").textContent = username;
+    const SUPABASE_URL = 'https://gqchuococleviialhzor.supabase.co';
+    const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImdxY2h1b2NvY2xldmlpYWxoem9yIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NDc5MDgsImV4cCI6MjA3ODUyMzkwOH0.5gNWgtXyb4w4B8pyIfpGX71Tb3GLujyf4eN5f8O0PXY';
+    const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
 
-    // Toggle theme
+    // Get username from localStorage (fix)
+    let username = localStorage.getItem("username");
+    if (!username || username.trim() === "") {
+      username = prompt("Enter your name:") || "Guest";
+      localStorage.setItem("username", username);
+    }
+    document.getElementById("userDisplay").textContent = "Logged in as: " + username;
+
+    // Theme toggle
     const toggle = document.getElementById("themeToggle");
     toggle.addEventListener("click", () => {
       document.body.classList.toggle("light-mode");
       toggle.classList.toggle("active");
+      localStorage.setItem("theme", document.body.classList.contains("light-mode") ? "light" : "dark");
     });
 
-    // Sign out
-    function signOut() {
-      localStorage.removeItem("remember");
-      localStorage.removeItem("username");
-      window.location.href = "index.html";
+    // Keep saved theme
+    if (localStorage.getItem("theme") === "light") {
+      document.body.classList.add("light-mode");
+      toggle.classList.add("active");
     }
 
     // Load messages
     async function loadMessages() {
-      const { data, error } = await supabaseClient
-        .from("messages")
-        .select("*")
-        .order("created_at", { ascending: true });
-      if (error) console.error(error);
-      chatContainer.innerHTML = "";
-      data.forEach(displayMessage);
+      const { data } = await supabase.from("messages").select("*").order("created_at", { ascending: true });
+      const container = document.getElementById("messages");
+      container.innerHTML = "";
+      data.forEach(addMessageToDOM);
+      container.scrollTop = container.scrollHeight;
     }
 
-    // Display each message
-    function displayMessage({ username, message }) {
+    function addMessageToDOM(msg) {
       const div = document.createElement("div");
-      div.className = "chat-message";
-      if (username === "Shreyam" || username === "Saksham") {
+      div.className = "message";
+      if (msg.username === "Shreyam" || msg.username === "Saksham") {
         div.classList.add("dev");
-        div.innerHTML = `<strong>${username} (DEV)</strong>: ${message}`;
-      } else {
-        div.innerHTML = `<strong>${username}</strong>: ${message}`;
+        msg.username += " (DEV)";
       }
-      chatContainer.appendChild(div);
-      chatContainer.scrollTop = chatContainer.scrollHeight;
+      div.innerHTML = `<strong>${msg.username}:</strong> ${msg.content}`;
+      document.getElementById("messages").appendChild(div);
     }
 
-    // Send message
-    chatForm.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const text = chatInput.value.trim();
-      if (!text) return;
-      chatInput.value = "";
-      await supabaseClient.from("messages").insert([{ username, message: text }]);
-    });
+    async function sendMessage() {
+      const input = document.getElementById("messageInput");
+      const content = input.value.trim();
+      if (!content) return;
+      await supabase.from("messages").insert([{ username, content }]);
+      input.value = "";
+    }
 
-    // Realtime updates
-    supabaseClient
-      .channel("public:messages")
-      .on(
-        "postgres_changes",
-        { event: "INSERT", schema: "public", table: "messages" },
-        (payload) => displayMessage(payload.new)
-      )
+    // Live chat updates
+    supabase.channel('public:messages')
+      .on('postgres_changes', { event: 'INSERT', schema: 'public', table: 'messages' }, payload => {
+        addMessageToDOM(payload.new);
+        document.getElementById("messages").scrollTop = document.getElementById("messages").scrollHeight;
+      })
       .subscribe();
+
+    function signOut() {
+      localStorage.removeItem("username");
+      location.href = "index.html";
+    }
 
     loadMessages();
   </script>
